--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-back": "0.0.2",
     "express-dynamic-helpers-patch": "0.0.2",
     "express-flash": "0.0.2",
     "express-session": "^1.17.1",
