--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@okta/oidc-middleware": "^0.1.3",
     "@okta/okta-sdk-nodejs": "^1.1.0",
+    "async": "^3.2.0",
     "bcrypt": "^4.0.1",
     "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
